--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-
+.container{
+  width: 100%;
+  max-width: 530px;
+  box-shadow: 0 0 5px 0 rgba(0,0,0,0.3);
+  border-radius: 9px;
+}
+.btn{
+  width: 49%;
+  box-shadow: 0 0 4px 0 rgba(0,0,0,0.3);
+}
